Setting up Schema, setting up get requests
